# phantom

./: .gitignore  CMakeLists.txt  README.md
assets/: phantom.icns
cmake/: Info.plist.in  sync_models.sh
src/: config.def.h  font.c  font.h  input.c  input.h  macos.h  main.c  platform_macos.m  pty.c  pty.h  render.c  render.h  search.c  search.h  terminal.c  terminal.h  utf8.h  util.h
src/ml/: ansi.c  ansi.h  autocomplete.c  autocomplete.h  ccg.c  ccg.h  context.c  context.h  fsprobe.c  fsprobe.h  history.c  history.h  htrie.c  htrie.h  llm.c  llm.h  ml_log.h  schema.c  schema.h
tests/: test_exit_code.c  test_pty.c  test_search.c  test_terminal.c
tests/ml/: llama_stub.c  test_ansi.c  test_autocomplete_fim.c  test_ccg.c  test_ccg_training.c  test_context.c  test_fs_complete.c  test_fsprobe.c  test_history.c  test_htrie.c  test_hybrid_flow.c  test_kv_cache.c  test_schema.c  test_thread_qos.c
